# scFM_eval

./: .env.example  .gitignore  DATA_REQUIREMENTS.md  README.md  dataset_info.json  debug_encoder.py  debug_omnicell_direct.py  debug_omnicell_single_dataset_umap.py  encoder_eval_thoughts.md  encoder_notes.md  inspect_omnicell_inputs.py  pyproject.toml  run_experiments_parallel.py  run_omnicell_checkpoint_sweep.py  scratch.ipynb  setup_path.py  temp.py
data/: concord_generator.py  data_loader.py  depmap_loader.py
debug_omnicell_umap/: last_console_tee.txt
docs/: CLASSIFICATION_SYSTEM.md  CLASSIFICATION_TASKS.md  EVALUATION_STRATEGY.md  TASKS_AND_DATA_LOADING.md
evaluation/: annotation.py  baseline_embeddings.py  batch_effects.py  batch_effects_metrics.md  biological_signal.py  classification.py  drug_response.py  eval.py  survival.py  topology.py  trajectory.py
extractors/: README.md  __init__.py  base_extract.py  registry.py  setup_envs.sh
features/: scconcept_extractor.py  scimilarity_extractor.py
models/: classify.py  gf_finetune.py
parallel_experiments/: __init__.py  config.py  experiment_checker.py  experiment_runner.py  file_discovery.py  gpu_manager.py  logging_config.py  main.py  models.py  status_tracker.py  temp_management.py
run/: evaluation_runner.py  run_eval_classify_from_cache.py  run_exp.py  test.py  test_omnicell_embed.py  utils.py
scripts/: diagnose_gene_symbols.py  run_brca.sh  run_brca_concat.sh  run_brca_eval_classify_only.sh  run_brca_gf.sh  run_brca_laplacian_ae.sh  run_brca_scimilarity_scconcept.sh
setup/: dataset_paths.yaml  (+3 more)
(+932 files in other folders)
